@@ -1,4 +1,5 @@
 0.7-devel
+    + Added measures to facts view.
 0.6
     + Added facts view (and support for column size saving).
     + Added dimension filter icons (shortcuts) to info pieces.
